--- a/app/src/main/res/drawable/toolbar_dropshadow.xml
+++ b/app/src/main/res/drawable/toolbar_dropshadow.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient android:angle="90"
-        android:endColor="@color/red"
+        android:endColor="@color/shadow"
         android:startColor="@color/transparent"/>
 </shape>
