--- a/app/src/main/res/layout/item_actor.xml
+++ b/app/src/main/res/layout/item_actor.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     style="@style/ItemActorRoot">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/itemactor_photo"
         android:layout_width="@dimen/actor_photo_size"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/actor_photo_size"
         android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay"
@@ -19,11 +19,11 @@
 
     <TextView
         android:id="@+id/itemactor_name"
-        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_width="@dimen/actor_photo_size"
         style="@style/ItemActorActorName"
         app:layout_constraintEnd_toEndOf="@+id/itemactor_photo"
         app:layout_constraintStart_toStartOf="@+id/itemactor_photo"
         app:layout_constraintTop_toBottomOf="@+id/itemactor_photo"
         tools:text="@string/itemactor_actor_name" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
